Start to implement website structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<h1>Hello moto</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Cas UX Design - Raoni Caselli</title>
+  <meta name="keywords" content="UX Design, user experience, design, freelance, digital products, portfolio, Florianópolis, value, user centered, problem solving">
+  <meta name="description" content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
+  <meta name="author" content="Cas UX Design - Raoni Caselli">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <link rel="stylesheet" href="fonts/style.css">
+  <link href="node_modules/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="css/grunt-project.css">
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+<body>
+  <div id="header"></div>
+  <div class="page-wrapper">
+    <div id="home"></div>
+    <div id="about" class="container">
+      <h1>Heading 1</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, obcaecati, numquam dolores ut aliquam dolorum eaque nulla quidem inventore tempore eos maiores error optio autem reiciendis enim dicta harum odit</p>
+      <h2>Heading 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, obcaecati, numquam dolores ut aliquam dolorum eaque nulla quidem inventore tempore eos maiores error optio autem reiciendis enim dicta harum odit?</p>
+      <h3>Heading 3</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, obcaecati, numquam dolores ut aliquam dolorum eaque nulla quidem inventore tempore eos maiores error optio autem reiciendis enim dicta harum odit?</p>
+      <h4>Heading 4</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, obcaecati, numquam dolores ut aliquam dolorum eaque nulla quidem inventore tempore eos maiores error optio autem reiciendis enim dicta harum odit?</p>
+      <h5>Heading 5</h5>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, obcaecati, numquam dolores ut aliquam dolorum eaque nulla quidem inventore tempore eos maiores error optio autem reiciendis enim dicta harum odit?</p>
+      <h6>Heading 6</h6>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, obcaecati, numquam dolores ut aliquam dolorum eaque nulla quidem inventore tempore eos maiores error optio autem reiciendis enim dicta harum odit?</p>
+      <div><a class="link" href="#" alt="">Hello world</a></div>
+      <div><a class="button flat" href="#" alt="">Hello</a></div>
+      <div><a class="button" href="#" alt="">Hello</a></div>
+    </div>
+  </div>
+
+  <script src="js/vendor/jquery-1.10.2.min.js"></script>
+  <script src="js/grunt-project.min.js"></script>
+</body>
+</html>
