--- a/html/index.html
+++ b/html/index.html
@@ -1,26 +1,36 @@
 <!doctype html>
-<html lang=en>
+<html lang="en">
 
 <head>
-    <meta charset=utf-8>
+    <meta charset="utf-8">
     <title>Cas UX Design - Raoni Caselli</title>
-    <meta name=keywords content="UX Design, user experience, design, freelance, digital products, portfolio, Florianópolis, value, user centered, problem solving">
-    <meta name=description content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
-    <meta name=author content="Cas UX Design - Raoni Caselli">
-    <meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel=stylesheet href=fonts/style.css>
-    <link href=node_modules/mdi/css/materialdesignicons.min.css media=all rel=stylesheet type=text/css>
-    <link rel=stylesheet href=css/grunt-project.css>
+    <meta name="keywords" content="UX Design, user experience, design, freelance, digital products, portfolio, Florianópolis, value, user centered, problem solving">
+    <meta name="description" content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
+    <meta name="author" content="Cas UX Design - Raoni Caselli">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="fonts/style.css">
+    <link href="css/mdi/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="js/vendor/unslider/unslider.css">
+    <link rel="stylesheet" href="js/vendor/unslider/unslider-dots.css">
+    <link rel="stylesheet" href="css/grunt-project.css">
 </head>
 
 <body>
+    <!-- build:section sidemenu --><!-- /build -->
     <!-- build:section header --><!-- /build -->
-    <!-- build:section home --><!-- /build -->
-    <!-- build:section about --><!-- /build -->
-    <!-- build:section portfolio --><!-- /build -->
+    <main id="panel" class="panel">
+      <!-- build:section home --><!-- /build -->
+      <!-- build:section about --><!-- /build -->
+      <!-- build:section portfolio --><!-- /build -->
+    </main>
 
-    <script src="js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/slideout.min.js"></script>
+    <script src="js/vendor/unslider/unslider-min.js"></script>
+    <script src="//stephband.info/jquery.event.move/js/jquery.event.move.js"></script>
+    <script src="//stephband.info/jquery.event.swipe/js/jquery.event.swipe.js"></script>
     <script src="js/grunt-project.min.js"></script>
+    <script src="slidemenu.js"></script>
 </body>
 
 </html>
