--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/slideout.min.js"></script>
     <script src="js/vendor/unslider/unslider-min.js"></script>
-    <script src="//stephband.info/jquery.event.move/js/jquery.event.move.js"></script>
-    <script src="//stephband.info/jquery.event.swipe/js/jquery.event.swipe.js"></script>
+    <script src="js/vendor/jquery-event-move.js"></script>
+    <script src="js/vendor/jquery-event-swipe.js"></script>
     <script src="js/grunt-project.min.js"></script>
     <script src="slidemenu.js"></script>
 </body>
