Finished adding html structure

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,8 @@
       <!-- build:section home --><!-- /build -->
       <!-- build:section about --><!-- /build -->
       <!-- build:section portfolio --><!-- /build -->
+      <!-- build:section process --><!-- /build -->
+      <!-- build:section contact --><!-- /build -->
     </main>
 
     <script src="js/vendor/jquery.min.js"></script>
