Add target blank to links

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             </ul>
             <ul class="row flex-center align-center">
                 <li>
-                    <a class="mdi mdi-behance mdi-24px social-item" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance"></a>
+                    <a class="mdi mdi-behance mdi-24px social-item" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance" target="_blank"></a>
                 </li>
                 <li>
-                    <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin"></a>
+                    <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin" target="_blank"></a>
                 </li>
                 <li>
-                    <a class="mdi mdi-medium mdi-24px social-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
+                    <a class="mdi mdi-medium mdi-24px social-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium" target="_blank"></a>
                 </li>
             </ul>
         </section>
@@ -80,13 +80,13 @@
             </ul>
             <ul class="menu">
                 <li>
-                    <a class="mdi mdi-behance mdi-24px social-item" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance"></a>
+                    <a class="mdi mdi-behance mdi-24px social-item" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance" target="_blank"></a>
                 </li>
                 <li>
-                    <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin"></a>
+                    <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin" target="_blank"></a>
                 </li>
                 <li>
-                    <a class="mdi mdi-medium mdi-24px social-item last-menu-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
+                    <a class="mdi mdi-medium mdi-24px social-item last-menu-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium" target="_blank"></a>
                 </li>
             </ul>
         </nav>
@@ -119,9 +119,9 @@
                         </article>
                     </section>
                     <section class="row flex-end social-items">
-                        <a class="mdi mdi-behance mdi-24px button flat" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance"></a>
-                        <a class="mdi mdi-linkedin mdi-24px button flat" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin"></a>
-                        <a class="mdi mdi-medium mdi-24px button flat" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
+                        <a class="mdi mdi-behance mdi-24px button flat" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance" target="_blank"></a>
+                        <a class="mdi mdi-linkedin mdi-24px button flat" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin" target="_blank"></a>
+                        <a class="mdi mdi-medium mdi-24px button flat" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium" target="_blank"></a>
                     </section>
                 </header>
                 <section class="row">
