CSS tweaks - contact button and logo

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <input required name="email" id="cemail" type="email" placeholder="Personal or company email" />
                     <label for="cmessage"><p>Message</p></label>
                     <textarea required name="message" id="cmessage" rows="3" placeholder="What do you want to ask me?"></textarea>
-                    <a class="button">Send message</a>
+                    <a class="button flat">Send message</a>
                 </form>
             </article>
         </section>
