Add portfolio-project page

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div id="project-page"></div>
     <!-- build:section sidemenu --><!-- /build -->
     <!-- build:section header --><!-- /build -->
     <main id="panel" class="panel">
@@ -25,6 +26,7 @@
       <!-- build:section process --><!-- /build -->
       <!-- build:section contact --><!-- /build -->
     </main>
+
 
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/slideout.min.js"></script>
